--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -291,6 +291,10 @@
             {
               "path": "/drawer",
               "title": "Drawer 抽屉"
+            },
+            {
+              "path": "/picture-preview",
+              "title": "PicturePreview 图片预览"
             }
           ]
         }
@@ -589,6 +593,10 @@
             {
               "path": "/drawer",
               "title": "Drawer"
+            },
+            {
+              "path": "/picture-preview",
+              "title": "PicturePreview"
             }
           ]
         }
@@ -887,6 +895,10 @@
             {
               "path": "/drawer",
               "title": "Drawer"
+            },
+            {
+              "path": "/picture-preview",
+              "title": "PicturePreview"
             }
           ]
         }
@@ -1185,6 +1197,10 @@
             {
               "path": "/drawer",
               "title": "Drawer"
+            },
+            {
+              "path": "/picture-preview",
+              "title": "PicturePreview"
             }
           ]
         }
